--- a/index.html
+++ b/index.html
@@ -1,29 +1,35 @@
-<!-- index.html -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Homepage</title>
+  <title>나의 홈페이지</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>MY HOMEPAGE</h1>
+    <h1>나의 홈페이지</h1>
     <nav>
-      <a href="index.html">HOME</a>
-      <a href="about.html">ABOUT</a>
-      <a href="contact.html">CONTACT</a>
+      <ul>
+        <li><a href="index.html" class="active">홈</a></li>
+        <li><a href="resume.html">이력서&포트폴리오</a></li>
+        <li><a href="contact.html">연락처</a></li>
+      </ul>
     </nav>
   </header>
 
   <main>
-    <h2>AI OFFICE AUTOMATION APPLICATIONS</h2>
-    <p>This is my homepage, and this is a test example for an AI Office Automation Applications course.</p>
-    <ul>
-      <li><a href="about.html">Course Info</a></li>
-      <li><a href="resources.html">Resources</a></li>
-    </ul>
+    <section>
+      <h2>안녕하세요!</h2>
+      <p>저는 경영학과에 재학 중인 대학생입니다. 이 홈페이지는 저를 소개하고, 제가 참여한 활동들과 경험을 정리하기 위해 만들었습니다.</p>
+      <p>상단 메뉴를 통해 자기소개,이력서, 연락처 등을 확인하실 수 있습니다.</p>
+    </section>
   </main>
+
+  <footer>
+    <p>&copy; 2025 장지민의 홈페이지</p>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
