--- a/contact.html
+++ b/contact.html
@@ -1,37 +1,34 @@
-<!-- contact.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>MY HOMEPAGE</h1>
+    <h1>Contact Me</h1>
     <nav>
-      <a href="index.html">HOME</a>
-      <a href="about.html">ABOUT</a>
-      <a href="contact.html">CONTACT</a>
+      <ul>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="about.html">ABOUT</a></li>
+        <li><a href="contact.html" class="active">CONTACT</a></li>
+      </ul>
     </nav>
   </header>
 
   <main>
-    <h2>Contact Me</h2>
-    <p><strong>📧 Email:</strong> <a href="mailto:example@email.com">example@email.com</a></p>
-    <p><strong>🐙 GitHub:</strong> <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
-    <p><strong>📓 Notion:</strong> <a href="https://www.notion.so/yourpage" target="_blank">notion.so/yourpage</a></p>
+    <section>
+      <h2>Get in Touch</h2>
+      <p>Email: <a href="wkdwlals5204@naver.com">wkdwlals5204@naver.com</a></p>
+      <p>GitHub: <a href="010-2xxx-xxxx" target="_blank">010-2xxx-xxxx</a></p>
+      <p>Notion: <a href="카톡아이디:jiminX" target="_blank">카톡아이디:jiminX</a></p>
 
-    <h3>Send a Message</h3>
-    <form>
-      <input type="text" placeholder="Your Name" required /><br /><br />
-      <input type="email" placeholder="Your Email" required /><br /><br />
-      <textarea placeholder="Your Message" rows="5" required></textarea><br /><br />
-      <button type="submit">Send</button>
-    </form>
-  </main>
+      
+
+  <footer>
+    <p>&copy; 2025 Contact Page</p>
+  </footer>
 </body>
 </html>
-
-
