--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li><a href="index.html" class="active">홈</a></li>
         <li><a href="resume.html">이력서&포트폴리오</a></li>
         <li><a href="contact.html">연락처</a></li>
+        <li><a href="about.html">자기소개</a></li>
       </ul>
     </nav>
   </header>
