--- a/index.html
+++ b/index.html
@@ -12,18 +12,27 @@
     <nav>
       <ul>
         <li><a href="index.html" class="active">홈</a></li>
-        <li><a href="resume.html">이력서&포트폴리오</a></li>
+        <li><a href="about.html">소개</a></li>
+        <li><a href="portfolio.html">포트폴리오</a></li>
+        <li><a href="resume.html">이력서</a></li>
         <li><a href="contact.html">연락처</a></li>
-        <li><a href="about.html">자기소개</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
     <section>
-      <h2>안녕하세요!</h2>
-      <p>저는 경영학과에 재학 중인 대학생입니다. 이 홈페이지는 저를 소개하고, 제가 참여한 활동들과 경험을 정리하기 위해 만들었습니다.</p>
-      <p>상단 메뉴를 통해 자기소개,이력서, 연락처 등을 확인하실 수 있습니다.</p>
+      <h2>환영합니다!</h2>
+      <p>이 홈페이지는 저를 소개하고 다양한 정보를 담기 위해 제작되었습니다.</p>
+
+      <ul>
+        <li><strong>소개 페이지:</strong> 간단한 자기소개와 학과 이름이 포함되어 있습니다.</li>
+        <li><strong>포트폴리오 페이지:</strong> 항목은 만들어져 있으며, 향후 내용을 채울 예정입니다.</li>
+        <li><strong>이력서 페이지:</strong> 항목은 준비되어 있으며, 추후 내용을 추가할 예정입니다.</li>
+        <li><strong>연락처 페이지:</strong> 이메일 주소,카톡아이디 포함되어 있습니다.</li>
+      </ul>
+
+      <p>상단 메뉴를 통해 각 페이지로 이동할 수 있습니다.</p>
     </section>
   </main>
 
